fix: row count container alignment (#10179)

--- a/superset-frontend/src/components/ListView/ListViewStyles.less
+++ b/superset-frontend/src/components/ListView/ListViewStyles.less
@@ -134,8 +134,8 @@
     }
 
     .row-count-container {
-      position: absolute;
-      right: 28px;
+      float: right;
+      padding-right: 24px;
     }
   }
 
